Fix T44359: `mesh_normals_loop_custom_set()` would not behave correctly with zero-normals.

Zero-normals here are used as a shortcut to say 'use auto-computed values'.
So we have to do so in pre-process steps!